# moshiki

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  gen_split_template_test.fish  hdfs-logs.json
.github/workflows/: rust.yml
bench_data/: android  hdfs-logs  windows
benches/: bench_indexing.rs  bench_schema.rs  bench_tokenizer.rs
src/: constants.rs  dict.rs  fingerprint.rs  index.rs  lib.rs  main.rs  patterns.rs  prelim_index.rs  remapping.rs  schema.rs  search.rs  templates.rs  termmap.rs  tokenizer.rs
src/columns/: mod.rs  read.rs  write.rs
src/indexing/: doc_groups.rs  doc_groups_hashmap.rs  fingerprint.rs  index_writer.rs  mod.rs  pattern_detection.rs  patterns.rs  prelim.rs  preliminary_index.rs  remapping.rs  termmap.rs  write_columns.rs  write_dict.rs  writer.rs
src/tokenizer/: mod.rs  number.rs  number_as_string.rs  token.rs
stacker/: Cargo.toml
stacker/src/: arena_hashmap.rs  fastcmp.rs  lib.rs  shared_arena_hashmap.rs
tokenizer_bench_data/: android  hdfs-logs  windows
