[package]
name = "moshiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moshiki"
path = "src/main.rs"

[dependencies]
binggan = "0.14.2"
fnv = "1.0.7"
fxhash = "0.2.1"
memchr = "2.7.5"
memmap2 = "0.9.4"
sstable = "0.11.1"
stacker = { version = "0.5", path = "./stacker", package = "tantivy-stacker" }
tantivy-common = "0.9.0"
tantivy-sstable = "0.5.0"
zstd = "0.13.1"

[dev-dependencies]
tempfile = "3.20.0"

[[bench]]
name = "bench_tokenizer"
harness = false

# debug in bench profile
[profile.bench]
debug = true
[profile.release]
debug = true

