[package]
name = "moshiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moshiki"
path = "src/main.rs"

[dependencies]
binggan = "0.14.2"
fxhash = "0.2.1"
stacker = { version = "0.5", path = "./stacker", package = "tantivy-stacker" }
tantivy-common = "0.9.0"
tantivy-sstable = "0.5.0"
zstd = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20.0"

[[bench]]
name = "bench_tokenizer"
harness = false

[features]
default = ["number_as_string"]
# Improves performance and compression
number_as_string = []
# Lower performance and compression
match_composite_id = []

# debug in bench profile
[profile.bench]
debug = true
[profile.release]
debug = true

